desenvolvimento do front

--- a/fiveware-test-web/src/main/webapp/index.html
+++ b/fiveware-test-web/src/main/webapp/index.html
@@ -21,6 +21,7 @@
 		<script src="assets/libs/ui-bootstrap.min.js"></script>
 		<script src="assets/libs/angular-ui-router.min.js"></script>
 		<script src="assets/libs/angular-resource.min.js"></script>
+		<script src="assets/libs/checklist-model.js"></script>
 		
 		<!-- internal -->
 		<script src="app/fiveware-test.module.js"></script>
